--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,9 @@
 PORT=8080
+GRPC_PORT=8081
 
 # Database
-DB_PORT=5432
-DB_USER=postgres
-DB_PASS=root
-DB_NAME=productdb
-
-# Cache
-CACHE_PORT=6379
-CACHE_PASS=redis
+DB_HOST=
+DB_PORT=
+DB_USER=
+DB_PASS=
+DB_NAME=
