Disable errcheck linter on CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ jobs:
             --deadline=10m 
             --tests=false
             --exclude="SA1029: *"
+            --exclude=errcheck
 
   test:
     runs-on: ubuntu-latest
