--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
             --deadline=10m 
             --tests=false
             --exclude="SA1029: *"
-            --exclude=errcheck
+            --disable=errcheck
 
   test:
     runs-on: ubuntu-latest
